--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,5 @@
-div {
-  color:aqua
-}
+@import './base/normalize';
+@import './base/global';
+
+@import './components/container.scss';
+@import './components/cards.scss';
