--- a/src/scss/components/cards.scss
+++ b/src/scss/components/cards.scss
@@ -1,6 +1,39 @@
 .card {
-  flex-basis: 33%;
+  flex-basis: 30rem;
+  max-width: 50rem;
+  flex-grow: 1;
   background: rgba(255, 255, 255, 0.3);
+  box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
+  background: rgba(255, 255, 255, 0.1);
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
   padding: 1.5rem;
   border-radius: 1rem;
+  border-color: transparent;
+  text-align: justify;
+
+  .card__footer {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .btn-delete {
+    position: relative;
+    background-color: $red;
+    border-radius: 4px;
+    text-transform: uppercase;
+    color: $white;
+    font-size: 10px;
+    overflow: hidden;
+    transition: all 500ms ease;  
+    z-index: 0;
+    font-weight: 700;
+    cursor: pointer;
+    border: transparent;
+    display: inline-block;
+    height: 5rem;
+  }
 }
+
