--- a/src/scss/components/container.scss
+++ b/src/scss/components/container.scss
@@ -2,10 +2,11 @@
   width: 100%;
 
   .container__post {
-    width: 80vw;
+    max-width: 150rem;
+    width: 90%;
     margin: 0 auto;
     display: flex;
-    justify-content: space-evenly;
+    flex-wrap: wrap;
     gap: 2rem;
   }
 }
